--- a/foodapp/requirements.txt
+++ b/foodapp/requirements.txt
@@ -6,6 +6,7 @@ cloudinary==1.43.0
 cryptography==44.0.2
 Django==5.1.6
 django-ckeditor==6.7.2
+django-filter==25.1
 django-js-asset==3.0.1
 django-oauth-toolkit==3.0.1
 djangorestframework==3.15.2
