--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
@@ -19,6 +20,7 @@
     "expo": "53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "qs": "^6.14.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.13.5",
