--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.14.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "^5.4.0",
