--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
@@ -25,9 +26,12 @@
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "^1.20.1",
+    "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.13.5",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5"
   },
