--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.1.9",
-    "@react-navigation/native-stack": "^7.3.13",
-    "@react-navigation/stack": "^7.3.2",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.3",
     "@stripe/stripe-react-native": "^0.45.0",
     "axios": "^1.9.0",
     "expo": "53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.8.1",
     "qs": "^6.14.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
