--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -25,12 +25,15 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "qs": "^6.14.0",
+    "query-string": "^9.2.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "^1.20.1",
+    "react-native-momo": "^0.1.4",
     "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.13.5",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
