--- a/foodmobileapp/app.json
+++ b/foodmobileapp/app.json
@@ -13,16 +13,32 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Cho phép ứng dụng sử dụng vị trí của bạn để tìm cửa hàng gần nhất.",
+        "NSLocationAlwaysUsageDescription": "Cho phép ứng dụng sử dụng vị trí của bạn để tìm cửa hàng gần nhất."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Cho phép ứng dụng sử dụng vị trí của bạn để tìm cửa hàng gần nhất."
+        }
+      ]
+    ]
   }
 }
