--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -21,14 +21,18 @@
     "@stripe/stripe-react-native": "^0.45.0",
     "axios": "^1.9.0",
     "expo": "53.0.9",
+    "expo-google-places-autocomplete": "^1.2.0",
     "expo-image-picker": "^16.1.4",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
+    "install": "^0.13.0",
     "qs": "^6.14.0",
     "query-string": "^9.2.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.20.1",
     "react-native-momo": "^0.1.4",
     "react-native-pager-view": "^6.7.1",
@@ -39,7 +43,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-webview": "^13.13.5",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
