--- a/foodmobileapp/app.json
+++ b/foodmobileapp/app.json
@@ -26,19 +26,12 @@
       },
       "permissions": [
         "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION"
+        "ACCESS_FINE_LOCATION",
+        "INTERNET"
       ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      [
-        "expo-location",
-        {
-          "locationAlwaysAndWhenInUsePermission": "Cho phép ứng dụng sử dụng vị trí của bạn để tìm cửa hàng gần nhất."
-        }
-      ]
-    ]
+    }
   }
 }
