--- a/foodmobileapp/package.json
+++ b/foodmobileapp/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^7.3.3",
     "@stripe/stripe-react-native": "^0.45.0",
     "axios": "^1.9.0",
-    "expo": "53.0.9",
+    "expo": "^53.0.11",
     "expo-google-places-autocomplete": "^1.2.0",
     "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.5",
@@ -30,8 +30,10 @@
     "qs": "^6.14.0",
     "query-string": "^9.2.0",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
+    "react-native-autocomplete-input": "^5.5.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.20.1",
     "react-native-momo": "^0.1.4",
@@ -40,11 +42,10 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-screens": "^4.11.1",
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.13.5",
-    "react-native-get-random-values": "~1.11.0"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
